<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="184dp" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/image_detail"
        android:layout_width="0dp"
        android:layout_height="250dp"
        android:layout_margin="10dp"
        android:scaleType="centerCrop"
        app:shapeAppearanceOverlay="@style/roundedImageView"
        app:srcCompat="@android:color/darker_gray"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="0dp"
        android:layout_height="250dp"
        android:layout_margin="10dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="parent">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp">

            <TextView
                android:id="@+id/tv_label_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:text="@string/label_title"
                android:textColor="?android:attr/textColorPrimary"/>

            <TextView
                android:id="@+id/tv_data_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_label_title"
                android:textColor="?android:attr/textColorPrimary"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:text="@string/data_title"/>

            <TextView
                android:id="@+id/tv_label_release"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_data_title"
                android:layout_marginTop="8dp"
                android:textSize="16sp"
                android:text="@string/label_release"
                android:textColor="?android:attr/textColorPrimary"/>

            <TextView
                android:id="@+id/tv_data_release"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_label_release"
                android:textColor="?android:attr/textColorPrimary"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:text="@string/data_release" />

            <TextView
                android:id="@+id/tv_label_rating"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_data_release"
                android:layout_marginTop="8dp"
                android:textSize="16sp"
                android:text="@string/label_rating"
                android:textColor="?android:attr/textColorPrimary"/>

            <TextView
                android:id="@+id/tv_data_rating"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_label_rating"
                android:textColor="?android:attr/textColorPrimary"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:text="@string/data_rating" />

        </RelativeLayout>


    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="50dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.526"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView"
        app:layout_constraintVertical_bias="0.0">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp">

            <TextView
                android:id="@+id/tv_label_overview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_overview"
                android:textColor="?android:attr/textColorPrimary"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_data_overview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_label_overview"
                android:textColor="?android:attr/textColorPrimary"
                android:textSize="16sp"
                tools:text="@string/data_overview"/>

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_share"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:backgroundTint="@color/red_secondary_dark"
        android:insetLeft="0dp"
        android:insetTop="0dp"
        android:insetRight="0dp"
        android:insetBottom="0dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        app:cornerRadius="30dp"
        app:icon="@drawable/ic_share_blue"
        app:iconTint="#ffffff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.975"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView2" />

</androidx.constraintlayout.widget.ConstraintLayout>