<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/navigation_home"
        android:title="@string/home"
        android:icon="@drawable/ic_home"
        />
    <item android:id="@+id/navigation_favorite"
        android:title="@string/favorite"
        android:icon="@drawable/ic_favorite"
        />
    <item android:id="@+id/navigation_about"
        android:title="@string/about"
        android:icon="@drawable/ic_info"
        />
</menu>