<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <!--<group android:menuCategory="container">
        <item android:id="@+id/share_menu"
            android:title="@string/share"
            android:icon = "@drawable/ic_share_blue"
            app:showAsAction="always" />
    </group>-->
    <item
        android:id="@+id/action_bookmark"
        android:icon="@drawable/ic_bookmark_selector"
        android:title="@string/menu_bookmark"
        app:showAsAction="always" />
</menu>